--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </h1>
             <div class="accordion">
               <ul
-                aria-label="Accordion Control Group Buttons"
+                aria-label="Accordion-control-group-buttons"
                 class="accordion-controls"
               >
                 <li class="QandA">
@@ -78,7 +78,7 @@
                   </button>
                   <div
                     aria-hidden="true"
-                    arida-labeledby="accordion-control-1"
+                    aria-labeledby="accordion-control-1"
                     role="region"
                     id="question-1"
                     class="answer hide"
@@ -106,7 +106,7 @@
                   </button>
                   <div
                     aria-hidden="true"
-                    arida-labeledby="accordion-control-2"
+                    aria-labeledby="accordion-control-2"
                     role="region"
                     id="question-2"
                     class="answer hide"
@@ -134,7 +134,7 @@
                   </button>
                   <div
                     aria-hidden="true"
-                    arida-labeledby="accordion-control-3"
+                    aria-labeledby="accordion-control-3"
                     role="region"
                     id="question-3"
                     class="answer hide"
@@ -163,7 +163,7 @@
                   </button>
                   <div
                     aria-hidden="true"
-                    arida-labeledby="accordion-control-4"
+                    aria-labeledby="accordion-control-4"
                     role="region"
                     id="question-4"
                     class="answer hide"
@@ -191,7 +191,7 @@
                   </button>
                   <div
                     aria-hidden="true"
-                    arida-labeledby="accordion-control-5"
+                    aria-labeledby="accordion-control-5"
                     role="region"
                     id="question-5"
                     class="answer hide"
